--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,12 @@ table p {
 .settingsTable {
   margin-bottom: 15px;
   background: rgb(249, 249, 249);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.12), 0 0px 3px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.settingsTable:hover {
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.16), 0 0px 10px rgba(0, 0, 0, 0.23);
 }
 
 .settingsTable thead tr:first-child th {
@@ -271,7 +276,7 @@ input[type=checkbox] {
   font-weight: bold;
   background-color: #12709e;
   z-index: 20;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .logo-text {
@@ -343,9 +348,14 @@ input[type=checkbox] {
   flex: 1;
   /* grow */
   padding-top: 5px;
+  padding-right: 25px;
   margin-left: 25px;
-  margin-right: 25px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 0px 4px rgba(0, 0, 0, 0.12), 0 0px 3px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.itemsdiv:hover {
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.16), 0 0px 10px rgba(0, 0, 0, 0.23);
 }
 
 .itemsTable>tbody>tr {
@@ -355,7 +365,6 @@ input[type=checkbox] {
 .itemsTable>tbody>tr>td:first-child {
   color: #12709e;
   font-weight: bold;
-  border-right: 1px solid #a3a3a3;
 }
 
 .itemsTable>thead>tr>th:not(:empty) {
@@ -366,13 +375,9 @@ input[type=checkbox] {
   color: #12709e;
 }
 
-.itemsTable>thead>tr>th {
-  border-bottom: 1px solid #a3a3a3;
-}
+.itemsTable>thead>tr>th {}
 
-.itemsTable>thead>tr>th:first-child {
-  border-right: 1px solid #a3a3a3;
-}
+.itemsTable>thead>tr>th:first-child {}
 
 .itemsTable>thead>tr>th:last-child {
   width: 100%;
@@ -455,7 +460,7 @@ html, body {
 .bodydiv {
   z-index: 0;
   display: flex;
-  height: calc(100% - 150px);
+  height: calc(100% - 151px);
 }
 
 h1, h2, h4 {
@@ -699,7 +704,7 @@ input[type=text], input[type=date], input[type=datetime], input[type=number], in
 input[type=text]:focus, input[type=date]:focus, input[type=datetime]:focus, input[type=number]:focus, input[type=search]:focus, input[type=time]:focus, input[type=url]:focus, input[type=email]:focus, textarea:focus, select:focus {
   -moz-box-shadow: 0 0 8px #12709e;
   -webkit-box-shadow: 0 0 8px #12709e;
-  box-shadow: 0 0 10px #12709e;
+  box-shadow: 0 0 6px #12709e;
   border: 1px solid #12709e;
 }
 
