--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ left : -9999px;
 
 .smartphone-name
 {
+float : right;
 font-size : 12px;
 font-weight : bold;
 margin-top : 4px;
@@ -377,6 +378,42 @@ width : 15px;
 {
 color : #12709E;
 float : left;
+}
+
+.colorpicker
+{
+float : right;
+width : 20px;
+height : 20px;
+-webkit-border-radius : 25px;
+   -moz-border-radius : 25px;
+        border-radius : 25px;
+background : red;
+}
+
+.btn-color
+{
+display : none;
+float : right;
+border : none;
+font-weight : 400;
+position : relative;
+border-radius : 3px;
+-webkit-box-shadow : 1px 1px 2px rgba(0,0,0,.3);
+        box-shadow : 1px 1px 2px rgba(0,0,0,.3);
+-webkit-transition : all .4s cubic-bezier(0,0,.2,1);
+     -o-transition : all .4s cubic-bezier(0,0,.2,1);
+        transition : all .4s cubic-bezier(0,0,.2,1);
+margin-bottom : 0;
+text-align : center;
+vertical-align : middle;
+touch-action : manipulation;
+cursor : pointer;
+white-space : nowrap;
+padding : 0;
+font-size : 13px;
+line-height : 1.846;
+user-select : none;
 }
 
 h3
