--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,14 @@ cursor : pointer;
 color : #129E41;
 }
 
-.heavy
+.smartphoneCount{
+        font-weight : bold;
+        color:     #12709E;
+}
+
+.countryInput
 {
+float: none;
 font-weight : bold;
 }
 
@@ -304,7 +310,9 @@ font-weight : bold;
 position : relative;
 float : right;
 flex : 1;
-margin-left : 25px;/* grow */
+margin-left : 25px;
+
+/* grow */
 padding-right : 25px;
 transition : all .3s cubic-bezier(.25, .8, .25, 1);
 box-shadow : 0 0 4px rgba(0, 0, 0, .12), 0 0 3px rgba(0, 0, 0, .24);
@@ -351,6 +359,10 @@ width : 100%;
 width : 100px;
 color : #12709E;
 background-color : rgb(249, 249, 249);
+}
+
+.filterTemplates{
+        width : 150px;  
 }
 
 .storageInput
@@ -733,13 +745,17 @@ color : #12709E;
 
 :-moz-placeholder
 {
-opacity : 1;/* Mozilla Firefox 4 to 18 */
+opacity : 1;
+
+/* Mozilla Firefox 4 to 18 */
 color : #12709E;
 }
 
 ::-moz-placeholder
 {
-opacity : 1;/* Mozilla Firefox 19+ */
+opacity : 1;
+
+/* Mozilla Firefox 19+ */
 color : #12709E;
 }
 
